--- a/meson.build
+++ b/meson.build
@@ -1,12 +1,27 @@
 project('kms-quads',
   'c',
   default_options: [
-    'warning_level=3',
-    'c_std=c99',
+    'warning_level=2',
+    'c_std=c11',
   ]
 )
 
 cc = meson.get_compiler('c')
+
+if cc.links('''
+#include <stdint.h>
+int main(void) {
+  uint32_t x32 = 0;
+  uint64_t x64 = 0;
+  __atomic_load_n(&x32, __ATOMIC_SEQ_CST);
+  __atomic_load_n(&x64, __ATOMIC_SEQ_CST);
+  return 0;
+}''', name : 'built-in atomics')
+	libatomic = null_dep
+else
+	libatomic = cc.find_library('atomic')
+endif
+
 add_project_arguments(
   cc.get_supported_arguments([
     '-Wno-unused',
@@ -22,17 +37,10 @@ endif
 deps = [
   dependency('libdrm'),
   dependency('gbm'),
-  dependency('egl'),
   dependency('vulkan'),
+  libatomic,
+  cc.find_library('m')
 ]
-
-if get_option('glcore')
-  deps += dependency('gl')
-  defines += '-DGL_GLEXT_PROTOTYPES=1'
-  defines += '-DHAVE_GL_CORE=1'
-else
-  deps += dependency('glesv2')
-endif
 
 # generate vulkan shaders
 shaders = []
@@ -40,6 +48,10 @@ glslang = find_program('glslangValidator')
 shaders_src = [
 	'vulkan.vert',
 	'vulkan.frag',
+  'vkcube.vert',
+  'vkcube.frag',
+  'simple.vert',
+  'simple.frag'
 ]
 
 foreach shader : shaders_src
@@ -54,13 +66,9 @@ foreach shader : shaders_src
 endforeach
 
 src = [
-  'main.c',
-  'buffer.c',
-  'device.c',
-  'edid.c',
-  'egl-gles.c',
-  'kms.c',
-  'vulkan.c',
+  'vulkan2.c',
+  'modesetting.c',
+  'esTransform.c',
   shaders,
 ]
 executable('kms-quads', src,
